Add gb_dyno application to dependencies
gb_dyno application is added as a dependency in to rebar.config file.
gb_dyno application added to reltool.config file as an application to be only loaded but not started.

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -16,6 +16,7 @@
 			     gb_hash,
 			     {erl_leveldb, load},
 			     enterdb,
+			     {gb_dyno, load},
 			     pundun]},
        {rel, "configure", "1", [kernel,
 				stdlib,
