--- a/rebar.config
+++ b/rebar.config
@@ -19,7 +19,8 @@
 	{enterdb, ".*", {git, "https://github.com/pundunlabs/enterdb.git",{branch, "master"}}},
 	{gb_conf, ".*", {git, "https://github.com/pundunlabs/gb_conf.git",{branch, "master"}}},
 	{gb_log, ".*", {git, "https://github.com/pundunlabs/gb_log.git",{branch, "master"}}},
-	{gb_hash, ".*", {git, "https://github.com/pundunlabs/gb_hash.git",{branch, "master"}}}
+	{gb_hash, ".*", {git, "https://github.com/pundunlabs/gb_hash.git",{branch, "master"}}},
+	{gb_dyno, ".*", {git, "https://github.com/pundunlabs/gb_dyno.git",{branch, "master"}}}
     ]}.
 
 {pre_hooks, [
