--- a/.gitignore
+++ b/.gitignore
@@ -1,55 +1,25 @@
-# ignore any file generated under ebin dirs
-ebin
-*.beam
-
-# ignore dependencies folder
-deps
-
-#docs
-doc
-!doc/overview.edoc
-
-#eunit
-.eunit
-
-#common test
-test/logs
-
-#asn1 generated file
-src/APOLLO-PDU-Descriptions.asn1db
-src/APOLLO-PDU-Descriptions.erl
-src/APOLLO-PDU-Descriptions.hrl
-
-# ignore sasl_log
-sasl_log
-
-#ignore autodeps
-*.autodeps
-
-# ignore any compiled c-code under system architecture directory
-x86_64-unknown-linux-gnu
-
-#ignore emacs bkp + autostore
-*~
-*\#
-*/.#*
-erl_crash.dump
-
-#ignore vim swap files
-*.swp
-
-#ignore generated libraries
-*.so*
+# Compiled Object files, Static and Dynamic libs (Shared Objects)
 *.o
+*.a
+*.so
 
-# ignore .plts (Dialyzer PLT directory)
-.plts
-*.plt
+# Folders
+_obj
+_test
 
-#ignore release
-rel/pundun
-rel/files
+# Architecture specific extensions/prefixes
+*.[568vq]
+[568vq].out
 
-#other
-.concrete/DEV_MODE
-.rebar
+*.cgo1.go
+*.cgo2.c
+_cgo_defun.c
+_cgo_gotypes.go
+_cgo_export.*
+
+_testmain.go
+
+*.exe
+*.test
+*.prof
+*.swp
